--- a/events.html
+++ b/events.html
@@ -41,21 +41,15 @@
                             <span></span>
                         </div><!-- .hamburger-menu -->
 
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Events</a></li>
-                            <li><a href="#">News</a></li>
-                            <li><a href="#">Contact</a></li>
+                        <ul>  
+                            <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About us</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav><!-- .site-navigation -->
                 </div><!-- .col -->
 
-                <div class="col-lg-3 d-none d-lg-block order-2 order-lg-3">
-                    <div class="buy-tickets">
-                        <a class="btn gradient-bg" href="#">Buy Tickets</a>
-                    </div><!-- .buy-tickets -->
-                </div><!-- .col -->
             </div><!-- .row -->
         </div><!-- .container-fluid -->
     </div><!-- .header-bar -->
@@ -72,29 +66,7 @@
         </div>
     </div>
 </header><!-- .site-header -->
-
-<form class="events-search">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-3">
-                <input type="date" placeholder="Date">
-            </div>
-
-            <div class="col-12 col-md-3">
-                <input type="text" placeholder="Event">
-            </div>
-
-            <div class="col-12 col-md-3">
-                <input type="text" placeholder="Location">
-            </div>
-
-            <div class="col-12 col-md-3">
-                <input class="btn gradient-bg" type="submit" value="Search Events">
-            </div>
-        </div>
-    </div>
-</form>
-
+<br><br>
 <div class="container">
     <div class="row events-list">
         <div class="col-12 col-lg-6 single-event">
@@ -568,11 +540,10 @@
 
                 <nav class="footer-navigation">
                     <ul class="flex flex-wrap justify-content-center align-items-center">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Contact</a></li>
+                          <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About us</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
