--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 </div>
 
 <hr>
-<div style="margin: 0 auto;width: 150%;">
+<div style="margin: 0 auto;width: 150%; alight:center">
     <img src="images/new-bg.png">
 </div>
 <div class="newsletter-subscribe">
