--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                     <div class="event-content-wrap positioning-event-2">
                         <figure>
-                            <a href="#"><img src="images/2.jpg" alt=""></a>
+                            <a href="#"><img src="images/hack.pcx" alt=""></a>
                         </figure>
 
                     </div>
