--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
                         <div class="event-partner-logo logo-sucks">
                             <a href="#">
-                                <img src="images/sponsors/Jetbrains.jpg" alt="">
+                                <img src="images/sponsors/Jetbrains.png" alt="">
                             </a>
                         </div>
 
@@ -358,7 +358,7 @@
 
                         <div class="event-partner-logo logo-sucks">
                             <a href="#">
-                                <img src="images/sponsors/temboo.jpg" alt="">
+                                <img src="images/sponsors/temboo.png" alt="">
                             </a>
                         </div>
 
