--- a/index.html
+++ b/index.html
@@ -337,7 +337,11 @@
                                 <img class="img-limit" src="images/sponsors/hacksociety.png"alt="">
                             </a>
                         </div>
-
+                        <div class="event-partner-logo logo-sucks">
+                            <a href="#">
+                                <img src="images/patrons/tech.png" class="img-limit" alt="">
+                            </a>
+                        </div>
                         <div class="event-partner-logo logo-sucks">
                             <a href="#">
                                 <img src="images/sponsors/HE_logo.png" style="max-width: 250px;max-height: 200px;" alt="">
@@ -401,7 +405,7 @@
                     </div>
                     <div class="event-partner-logo logo-sucks">
                         <a href="#">
-                            <img src="images/patrons/tech.png" class="img-limit" alt="">
+                            <img src="images/sponsors/temboo.png" alt="">
                         </a>
                     </div>
                     
