--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     }
   }
 }
-</script>A
+</script>
     <!-- End -->
-       
+
 
     <!-- Mobile Specific Metas
         ================================================== -->
@@ -273,6 +273,61 @@
     </div><!-- Container end -->
 </section><!-- Intro area end -->
 
+        <!-- Header start -->
+        <header id="header" class="header header-transparent">
+            <div class="container">
+                <div class="row">
+                    <div class="navbar-header">
+                        <div class="logo container-fluid">
+                            <a href="index.html">
+                                <img src="assets/media/logo.png" alt="Microsoft Technical Community LPU Logo" height="100">
+                            </a>
+                        </div><!-- logo end -->
+                    </div><!-- Navbar header end -->
+
+                    <div class="site-nav-inner">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </button>
+
+                      <nav class="collapse navbar-collapse navbar-responsive-collapse pull-right">
+
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#about">About </a> </li>
+                            <li><a href="#ts-speaker">Organiser</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                            <li class="header-ticket">
+                            <a class="ticket-btn" href="#ts-event">Events</a>
+                            </li>
+
+                        </ul><!--/ Nav ul end -->
+
+                    </nav><!--/ Collapse end -->
+
+                </div><!-- Site nav inner end -->
+
+            </div><!-- Row end -->
+        </div><!-- Container end -->
+        <style type="text/css">
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+            width: 100%;
+        }
+
+
+        .card:hover {
+  box-shadow: 0 8px 50px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.19);
+  -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+}
+    </style>
+</header><!--/ Header end -->
 
 
 
