Add Sponsors and their links. Fixed Regitration button.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <p class="intro-desc lead">Microsoft Hackathon is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...</p>
                     <div class="gap-20"></div>
                     <p>
-                        <a href="#" class="btn btn-primary">Register Now <i class="fa fa-long-arrow-right"></i></a>
+                        <a href="#" class="btn btn-primary">Registrations will open soon <i class="fa fa-long-arrow-right"></i></a>
                     </p>
                 </div><!-- Intro content -->
             </div><!-- Col end -->
@@ -225,7 +225,7 @@
             <div class="facts-wrapper">
                 <div class="col-sm-3 ts-facts">
                     <div class="ts-facts-content">
-                        <h2 class="ts-facts-num"><span class="counterUp">968</span></h2>
+                        <h2 class="ts-facts-num"><span class="counterUp">200</span></h2>
                         <h3 class="ts-facts-title">Participants</h3>
                     </div>
                     <div class="ts-facts-icon">
@@ -235,7 +235,7 @@
 
                 <div class="col-sm-3 ts-facts">
                     <div class="ts-facts-content">
-                        <h2 class="ts-facts-num"><span class="counterUp">117</span></h2>
+                        <h2 class="ts-facts-num"><span class="counterUp">5</span></h2>
                         <h3 class="ts-facts-title">Speakers</h3>
                     </div>
                     <div class="ts-facts-icon">
@@ -245,7 +245,7 @@
 
                 <div class="col-sm-3 ts-facts">
                     <div class="ts-facts-content">
-                        <h2 class="ts-facts-num"><span class="counterUp">18</span></h2>
+                        <h2 class="ts-facts-num"><span class="counterUp">10</span></h2>
                         <h3 class="ts-facts-title">Sessions</h3>
                     </div>
                     <div class="ts-facts-icon">
@@ -255,7 +255,7 @@
 
                 <div class="col-sm-3 ts-facts">
                     <div class="ts-facts-content">
-                        <h2 class="ts-facts-num"><span class="counterUp">28</span></h2>
+                        <h2 class="ts-facts-num"><span class="counterUp">10</span></h2>
                         <h3 class="ts-facts-title">Sponsors</h3>
                     </div>
                     <div class="ts-facts-icon">
@@ -350,26 +350,30 @@
 
         <div class="row text-center">
             <div class="col-xs-12 col-sm-4 col-md-3">
-                <a  class="sponsor-logo highlight">
+                <a href="https://www.mozilla.org/en-US" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive  align-css" width="200" src="assets/media/sponsors/mozilla.jpg" alt="mozilla"/>
+                      <p style="margin-top:40px;">Open Source Sponsor</p>
                 </a>
             </div><!-- Col 1 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-3">
-                <a  class="sponsor-logo highlight">
+                <a href="https://developers.facebook.com/developercircles/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive" width="200" src="assets/media/sponsors/developer_circle.png" alt="developer circle"/>
+                     <p style="margin-top:42px;">Community Partner</p>
                 </a>
             </div><!-- Col 2 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-3">
-                <a class="sponsor-logo highlight">
+                <a href="http://hacksociety.tech/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive" width="200" src="assets/media/sponsors/hacksociety.png" alt="hacksociety"/>
+                     <p>Hackathon Partner</p>
                 </a>
             </div><!-- Col 3 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-3">
-                <a class="sponsor-logo highlight">
+                <a href="https://girlscriptsummit.tech/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive " width="200" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
+                    <p>Open Source and Diversity Partner</p>
                 </a>
             </div>
         </div><!--/ Content row 1 end -->
@@ -378,38 +382,43 @@
             <!-- Col 1 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-3">
-                <a class="sponsor-logo highlight">
+                <a href="https://www.jetbrains.com/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive" width="200" src="assets/media/sponsors/Jetbrains.png" alt="jetbrains"/>
+                    <p>IDE Sponsor</p>
                 </a>
             </div><!-- Col 2 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-3">
-                <a class="sponsor-logo highlight">
-                    <img class="img-responsive  align-css" width="200" src="assets/media/sponsors/HE.png" alt="hackerearth"/>
+                <a href="https://gitlab.com/" target="_blank" class="sponsor-logo highlight">
+                    <img class="img-responsive " width="200" src="assets/media/sponsors/gitlab.png" alt="GitLab"/>
+                      <p style="margin-top:14px">Diversity Sponsor</p>
                 </a>
             </div><!-- Col 3 end -->
             <div class="col-xs-12 col-sm-4 col-md-3">
-                <a class="sponsor-logo highlight">
+                <a href="https://balsamiq.com/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive " width="200" src="assets/media/sponsors/balasmiq.png" alt="balsamiq"/>
+                      <p>Silver Sponsor</p>
                 </a>
             </div>
-            <div class="row text-center">
                 <div class="col-xs-12 col-sm-4 col-md-3">
-                    <a class="sponsor-logo highlight">
-                        <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wolframalpha.png" alt="WolframAlpha"/>
+                    <a href="http://advantedge.vc/" target="_blank" class="sponsor-logo highlight">
+                        <img class="img-responsive " width="200" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
+                        <p>VC Support</p>
                     </a>
                 </div>
             </div><!--/ Content row 1 end -->
-
+              <div class="row text-center">
                 <div class="col-xs-12 col-sm-4 col-md-4">
-                    <a class="sponsor-logo highlight">
+                    <a href="https://www.get.tech/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive align-css" width="200" src="assets/media/sponsors/tech.png" alt=".tech"/>
+                        <p>Domain Sponsor</p>
                     </a>
                 </div><!-- Col 2 end -->
 
                 <div class="col-xs-12 col-sm-4 col-md-4">
-                    <a class="sponsor-logo highlight">
+                    <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wittyfeed.png" alt="wittyfeed"/>
+                        <p style="margin-top:32px">Powered By</p>
                     </a>
                 </div><!-- Col 3 end -->
             </div><!--/ Content row 1 end -->
@@ -439,6 +448,12 @@
                         <img class="img-responsive" style="margin-top:40px" src="assets/media/sponsors/inkmonk.png" alt="inkmonk" />
                     </a>
                 </div><!-- Col 4 end -->
+
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <a class="sponsor-logo">
+                        <img class="img-responsive" style="margin-top:20px" src="assets/media/sponsors/wolframalpha.png" alt="WolframAlpha" />
+                    </a>
+                </div><!-- Col 5 end -->
             </div><!--/ Content row 2 end -->
 
 
@@ -661,7 +676,7 @@
                         </ul>
                     </div><!-- Footer social end -->
                     <div class="gap-20"></div>
-                    <p>Made with <i style="color: #2970FB;" class="fa fa-2x fa-heart"></i> By <a href="https://rohitswami.com/" target="_blank"> Rohit Swami </a> &amp; <a  href="https://github.com/pranav0408/" target=""> Pranav Singh</a></p>
+                    <p>Made with <i style="color: #2970FB;" class="fa fa-2x fa-heart"></i> By <a>Vishwajit</a>,<a href="https://rohitswami.com/" target="_blank"> Rohit Swami </a> &amp; <a  href="https://github.com/pranav0408/" target=""> Pranav Singh</a></p>
 
                 </div><!-- Col end -->
 
