--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
             <div class="row">
                 <div class="general-btn text-center">
-                    <a class="btn btn-primary" href="#">Become our Sponsor</a>
+                    <a class="btn btn-primary" href="https://www.shortto.com/AJ" target="_blank">Become our Sponsor</a>
                 </div>
             </div><!--/ Content row 3 end -->
 
