Added npm to patrons

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <a href="https://girlscriptsummit.tech/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive " width="200" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
+                    <img class="img-responsive " width="200" style="margin-left:20px" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
                     <p>Open Source and Diversity Partner</p>
                 </a>
             </div>
@@ -448,12 +448,19 @@
                         <img class="img-responsive" style="margin-top:40px" src="assets/media/sponsors/inkmonk.png" alt="inkmonk" />
                     </a>
                 </div><!-- Col 4 end -->
-
+            </div><!--/ Content row 1 end -->
+            <div class="row text-center">
                 <div class="col-xs-12 col-sm-3 col-md-3">
                     <a class="sponsor-logo">
                         <img class="img-responsive" style="margin-top:20px" src="assets/media/sponsors/wolframalpha.png" alt="WolframAlpha" />
                     </a>
-                </div><!-- Col 5 end -->
+                </div><!-- Col 1 end -->
+
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <a class="sponsor-logo">
+                        <img class="img-responsive" style="margin-top:20px;" width="150px" src="assets/media/sponsors/npm.png" alt="npm" />
+                    </a>
+                </div><!-- Col 2 end -->
             </div><!--/ Content row 2 end -->
 
 
