added npm to patrons

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                         </ul>
                     </div><!-- Footer social end -->
                     <div class="gap-20"></div>
-                    <p>Made with <i style="color: #2970FB;" class="fa fa-2x fa-heart"></i> By <a href="https://rohitswami.com/" target="_blank"> Rohit Swami </a> &amp; <a  href="https://github.com/pranav0408/" target=""> Pranav Singh</a></p>
+                    <p>Made with <i style="color: #2970FB;" class="fa fa-2x fa-heart"></i> By <a href="https://rohitswami.com/" target="_blank"> Rohit Swami </a> &amp; <a  href="https://github.com/pranav0408/" target="_blank"> Pranav Singh</a></p>
 
                 </div><!-- Col end -->
 
