added npm\ to patrons

--- a/index.html
+++ b/index.html
@@ -461,6 +461,12 @@
                         <img class="img-responsive" style="margin-top:20px;" width="150px" src="assets/media/sponsors/npm.png" alt="npm" />
                     </a>
                 </div><!-- Col 2 end -->
+
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <a class="sponsor-logo">
+                        <img class="img-responsive" style="margin-top:-50px" src="assets/media/sponsors/startupSuccess.jpg" alt="Startup Success Stories" />
+                    </a>
+                </div><!-- Col 3 end -->
             </div><!--/ Content row 2 end -->
 
 
