--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
             </div><!--/ Title row end -->
 
             <div class="row">
+              <div class="col-xs-6 col-sm-3 col-md-2"></div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <div class="ts-speaker-image">
@@ -526,26 +527,7 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
-
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="ts-speaker transparent">
-                        <div class="ts-speaker-image">
-                            <img class="img-responsive" src="assets/media/bissoboss.jpeg" alt="biswarupMSP" />
-                            <ul class="social-links">
-                                <li><a ><i class="fa fa-instagram"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/biswarup1998/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="https://www.facebook.com/biswarup.banerjee.1998" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://twitter.com/bisso_1998" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            </ul>
-                        </div><!--Image end -->
-                        <div class="ts-speaker-info text-center">
-                            <h3 class="ts-speaker-name"><a href="#">Biswarup Benerjee</a></h3>
-                            <p class="ts-speaker-designation">MSP</p>
-                            <p class="ts-speaker-num"> +91 83605 16181 </p>
-                        </div><!-- Info end -->
-                    </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
-
+              <div class="col-xs-6 col-sm-3 col-md-2"></div>
         </div><!-- Content row 1 end -->
 
 
