Added hackerearth to sponsors

--- a/index.html
+++ b/index.html
@@ -375,53 +375,58 @@
                     <img class="img-responsive " width="200" style="margin-left:20px" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
                     <p>Open Source and Diversity Partner</p>
                 </a>
-            </div>
+            </div><!-- Col 4 end -->
         </div><!--/ Content row 1 end -->
 
         <div class="row text-center">
-            <!-- Col 1 end -->
-
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <a href="https://www.jetbrains.com/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive" width="200" src="assets/media/sponsors/Jetbrains.png" alt="jetbrains"/>
                     <p>IDE Sponsor</p>
                 </a>
-            </div><!-- Col 2 end -->
+            </div><!-- Col 1 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <a href="https://gitlab.com/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive " width="200" src="assets/media/sponsors/gitlab.png" alt="GitLab"/>
                       <p style="margin-top:14px">Diversity Sponsor</p>
                 </a>
-            </div><!-- Col 3 end -->
+            </div><!-- Col 2 end -->
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <a href="https://balsamiq.com/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive " width="200" src="assets/media/sponsors/balasmiq.png" alt="balsamiq"/>
                       <p>Silver Sponsor</p>
                 </a>
-            </div>
+            </div><!-- Col 3 end -->
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <a href="http://advantedge.vc/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive " width="200" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
                         <p>VC Support</p>
                     </a>
-                </div>
-            </div><!--/ Content row 1 end -->
+                </div><!-- Col 4 end -->
+            </div><!-- Content row 2 end -->
               <div class="row text-center">
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <a href="https://www.get.tech/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive align-css" width="200" src="assets/media/sponsors/tech.png" alt=".tech"/>
                         <p>Domain Sponsor</p>
                     </a>
-                </div><!-- Col 2 end -->
+                </div><!-- Col 1 end -->
 
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wittyfeed.png" alt="wittyfeed"/>
                         <p style="margin-top:32px">Powered By</p>
                     </a>
-                </div><!-- Col 3 end -->
-            </div><!--/ Content row 1 end -->
+                </div><!-- Col 2 end -->
+
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
+                        <img class="img-responsive align-css" width="200" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
+                        <p style="margin-top:56px">Platform Sponsor</p>
+                    </a>
+                </div><!-- Col 4 end -->
+            </div><!-- Content row 3 end -->
 
             <div class="row text-center">
                 <h3 class="sponsor-title">Patrons</h3>
