--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <meta charset="utf-8">
         <title>MSHacks 2.0 | MSTC LPU</title>
 
+    <!--Description -->
+        <meta name="description" content="MS Hacks is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...">
+        
+
     <!-- Mobile Specific Metas
         ================================================== -->
 
@@ -152,7 +156,7 @@
             <div class="col-sm-6">
                 <div class="intro-content">
                     <h2 class="intro-title">MS Hacks - Innovation is Power</h2>
-                    <p class="intro-desc lead">Microsoft Hackathon is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...</p>
+                    <p class="intro-desc lead">MS Hacks is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...</p>
                     <div class="gap-20"></div>
                     <p>
                         <a href="#" class="btn btn-primary">Registrations will open soon <i class="fa fa-long-arrow-right"></i></a>
