Added Meta Generated

--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
         <meta charset="utf-8">
         <title>MSHacks 2.0 | MSTC LPU</title>
 
-    <!--Description -->
-        <meta name="description" content="MS Hacks is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...">
-        
+    <!-- Generated Meta -->
+    <META NAME="author" CONTENT="Rohit Swami">
+    <META NAME="subject" CONTENT="Technology">
+    <META NAME="Description" CONTENT="MS Hacks 2.0  is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. ">
+    <META NAME="Classification" CONTENT="MS Hacks 2.0  is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...">
+    <META NAME="Keywords" CONTENT="hackathon,mshacks,microsoft,hack,coding">
+    <META NAME="Geography" CONTENT="Lovely Professional University,Punjab,India">
+    <META NAME="Language" CONTENT="English">
+    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC">
+    <META NAME="Copyright" CONTENT="MSTC LPU">
+    <META NAME="Designer" CONTENT="Rohit Swami">
+    <META NAME="Publisher" CONTENT="MSTC LPU">
+    <META NAME="distribution" CONTENT="Global">
+    <META NAME="Robots" CONTENT="INDEX,FOLLOW">
+    <META NAME="zipcode" CONTENT="144411">
+    <META NAME="city" CONTENT="Jalandhar">
+    <META NAME="country" CONTENT="India">
+
+    <!-- End -->
+       
 
     <!-- Mobile Specific Metas
         ================================================== -->
