--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- Basic Page Needs
         ================================================== -->
         <meta charset="utf-8">
-        <title>MSHacks 2.0 | MSTC LPU</title>
-
+        <title>MSHacks 2.0 | MSTC LPU - A annual Flagship Hackathon that changes what code means to us.</title>
+        <meta name="title" content ="MS Hacks 2.0 - A Hackathon that converts coffee to code and passion to victory.">
     <!-- Generated Meta -->
     <META NAME="author" CONTENT="Rohit Swami">
     <META NAME="subject" CONTENT="Technology">
