--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Generated Meta -->
     <META NAME="author" CONTENT="Rohit Swami">
     <META NAME="subject" CONTENT="Technology">
-    <META NAME="Description" CONTENT="MS Hacks 2.0  is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. ">
+    <META NAME="Description" CONTENT="MS Hacks 2.0  is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...">
     <META NAME="Classification" CONTENT="MS Hacks 2.0  is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...">
     <META NAME="Keywords" CONTENT="hackathon,mshacks,microsoft,hack,coding">
     <META NAME="Geography" CONTENT="Lovely Professional University,Punjab,India">
