--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
     <META NAME="zipcode" CONTENT="144411">
     <META NAME="city" CONTENT="Jalandhar">
     <META NAME="country" CONTENT="India">
-
+    <script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Event",
+  "name": "MS Hacks 2.0",
+  "description": "MS Hacks 2.0  is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in?",
+  "startDate": "2018-08-26",
+  "endDate": "2018-08-28",
+  "location": {
+    "@type": "Place",
+    "name": "Lovely professional university",
+    "address": {
+      "streetAddress": "Near Cheru Station, On GT Road",
+      "addressLocality": "Phagwara",
+      "addressRegion": "Punjab"
+    }
+  }
+}
+</script>A
     <!-- End -->
        
 
