--- a/index.html
+++ b/index.html
@@ -730,6 +730,7 @@
                             <li><a href="https://twitter.com/mstclpu" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/mstclpu" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="https://www.instagram.com/mstclpu/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+			    <li><a href="https://plus.google.com/u/1/communities/114043285727179316695" target="_blank"><i class="fa fa-google-plus-g"></i></a></li>
                         </ul>
                     </div><!-- Footer social end -->
                     <div class="gap-20"></div>
