--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             <div class="container">
                 <div class="banner-content text-center" >
                     <h1 class="banner-title "><span>Be a part of </span>MSHacks 2.0</h1>
+                      <h4 style="color:inherit;">Associate Sponsor GitHub</h4>
                     <h2 class="banner-desc "><span class="first">26-28 August</span><span>Lovely Professional University</span><span>2018 Edition</span></h2>
                 </div>
             </div><!-- Container end -->
@@ -212,7 +213,7 @@
                     <p class="intro-desc lead">MS Hacks is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...</p>
                     <div class="gap-20"></div>
                     <p>
-                        <a href="#" class="btn btn-primary">Registrations will open soon <i class="fa fa-long-arrow-right"></i></a>
+                        <a href="https://hacksociety.tech/attend/hackathon/44" target="_blank" class="btn btn-primary">Registrations are open <i class="fa fa-long-arrow-right"></i></a>
                     </p>
                 </div><!-- Intro content -->
             </div><!-- Col end -->
@@ -367,7 +368,7 @@
 
                 <div class="col-sm-3 ts-facts">
                     <div class="ts-facts-content">
-                        <h2 class="ts-facts-num"><span class="counterUp">11</span></h2>
+                        <h2 class="ts-facts-num"><span class="counterUp">13</span></h2>
                         <h3 class="ts-facts-title">Sponsors</h3>
                     </div>
                     <div class="ts-facts-icon">
@@ -457,7 +458,7 @@
         <div class="row text-center">
             <span class="icon-wrap"><i class="fa fa-handshake-o"></i></span>
             <h2 class="section-title">Sponsors &amp; Partners</h2>
-            <p class="section-sub-title">They helping us make this event possible.</p>
+            <p class="section-sub-title">They are helping us make this event possible.</p>
         </div><!--/ Title row end -->
 
         <div class="row text-center">
@@ -518,27 +519,48 @@
                 </div><!-- Col 4 end -->
             </div><!-- Content row 2 end -->
               <div class="row text-center">
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-4 col-md-3">
                     <a href="https://www.get.tech/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive align-css" width="200" src="assets/media/sponsors/tech.png" alt=".tech"/>
                         <p>Domain Sponsor</p>
                     </a>
                 </div><!-- Col 1 end -->
 
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-4 col-md-3">
                     <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wittyfeed.png" alt="wittyfeed"/>
                         <p style="margin-top:32px">Powered By</p>
                     </a>
                 </div><!-- Col 2 end -->
 
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-4 col-md-3">
                     <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
                         <img class="img-responsive align-css" width="200" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
                         <p style="margin-top:56px">Platform Sponsor</p>
                     </a>
+                </div><!-- Col 3 end -->
+
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <a href="https://github.com/" target="_blank" class="sponsor-logo highlight">
+                        <img class="img-responsive" width="176" src="assets/media/sponsors/github.png" alt="GitHub"/>
+                        <p>Associate Sponsor</p>
+                    </a>
                 </div><!-- Col 4 end -->
+
             </div><!-- Content row 3 end -->
+
+            <div class="row text-center">
+                    <div class="col-xs-12 col-sm-4 col-md-4"></div>
+
+              <div class="col-xs-12 col-sm-4 col-md-4">
+                  <a href="https://codingblocks.com/" target="_blank" class="sponsor-logo highlight">
+                      <img class="img-responsive " width="200" src="assets/media/sponsors/codingBlocks.jpeg" alt="Coding Blocks"/>
+                      <p>Platinum Sponsor</p>
+                  </a>
+              </div><!-- Col 1 end -->
+
+                    <div class="col-xs-12 col-sm-4 col-md-4"></div>
+          </div><!-- Content row 4 end -->
 
             <div class="row text-center">
                 <h3 class="sponsor-title">Patrons</h3>
@@ -567,21 +589,21 @@
                 </div><!-- Col 4 end -->
             </div><!--/ Content row 1 end -->
             <div class="row text-center">
-                <div class="col-xs-12 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-3 col-md-4">
                     <a class="sponsor-logo">
                         <img class="img-responsive" style="margin-top:20px" src="assets/media/sponsors/wolframalpha.png" alt="WolframAlpha" />
                     </a>
                 </div><!-- Col 1 end -->
 
-                <div class="col-xs-12 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-3 col-md-4">
                     <a class="sponsor-logo">
                         <img class="img-responsive" style="margin-top:20px;" width="150px" src="assets/media/sponsors/npm.png" alt="npm" />
                     </a>
                 </div><!-- Col 2 end -->
 
-                <div class="col-xs-12 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-3 col-md-4">
                     <a class="sponsor-logo">
-                        <img class="img-responsive" style="margin-top:-50px " src="assets/media/sponsors/startupSuccess.jpg" alt="Startup Success Stories" />
+                        <img class="img-responsive" style="margin-top:-50px" width="200px" src="assets/media/sponsors/startupSuccess.jpg" alt="Startup Success Stories" />
                     </a>
                 </div><!-- Col 3 end -->
             </div><!--/ Content row 2 end -->
