--- a/index.html
+++ b/index.html
@@ -678,6 +678,7 @@
     <img class="footer-pattern" src="assets/media/footer-pattern.png" alt="footer pattern">
 
 </footer><!-- Footer end -->
+</div><!-- Body inner end -->
 
 
     <!-- Javascript Files
@@ -739,11 +740,42 @@
                 });
             });
         });
-    </script>
+    </script><script type="text/javascript">
+//This is the "Offline copy of pages" service worker
+
+//Add this below content to your HTML page, or add the js file to your page at the very top to register sercie worker
+if (navigator.serviceWorker.controller) {
+  console.log('[PWA Builder] active service worker found, no need to register')
+} else {
+  //Register the ServiceWorker
+  navigator.serviceWorker.register('pwabuilder-sw.js', {
+    scope: './'
+  }).then(function(reg) {
+    console.log('Service worker has been registered for scope:'+ reg.scope);
+  });
+}
+</script>
+
 
        <!-- Template custom -->
        <script type="text/javascript" src="assets/js/custom.js"></script>
 
-   </div><!-- Body inner end -->
+   
+   <script type="text/javascript">
+//This is the "Offline copy of pages" service worker
+
+//Add this below content to your HTML page, or add the js file to your page at the very top to register sercie worker
+if (navigator.serviceWorker.controller) {
+  console.log('[PWA Builder] active service worker found, no need to register')
+} else {
+  //Register the ServiceWorker
+  navigator.serviceWorker.register('sw.js', {
+    scope: './'
+  }).then(function(reg) {
+    console.log('Service worker has been registered for scope:'+ reg.scope);
+  });
+}
+</script>
+
 </body>
 </html>
