--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+<!DOCTYPE html xmlns:fb="http://ogp.me/ns/fb#">
 <html lang="en">
 <head>
 
@@ -26,6 +26,9 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <meta property="og:image" content="assets/images/poster.jpeg"/>
+        <meta property="og:image:width" content="1280"/>
+        <meta property="og:image:height" content="750"/>
         <!-- End -->
         <!-- Generated Meta -->
         <META NAME="author" CONTENT="Rohit Swami">
