--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
-<!DOCTYPE html xmlns:fb="http://ogp.me/ns/fb#">
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
 
     <!-- Basic Page Needs
