--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
                 <div class="col-sm-3 ts-facts">
                     <div class="ts-facts-content">
-                        <h2 class="ts-facts-num"><span class="counterUp">13</span></h2>
+                        <h2 class="ts-facts-num"><span class="counterUp">15</span></h2>
                         <h3 class="ts-facts-title">Sponsors</h3>
                     </div>
                     <div class="ts-facts-icon">
@@ -553,16 +553,27 @@
         </div><!-- Content row 3 end -->
 
         <div class="row text-center">
-            <div class="col-xs-12 col-sm-4 col-md-4"></div>
+            <div class="col-xs-12 col-sm-4 col-md-3">
+              <a href="https://zulipchat.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="144" src="assets/media/sponsors/zulip.png" alt="Zulip"/>
+                  <p>Chat Partner</p>
+                </a>
+            </div><!-- Col 2 end -->
 
-            <div class="col-xs-12 col-sm-4 col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-3">
               <a href="https://codingblocks.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="200" src="assets/media/sponsors/codingBlocks.jpeg" alt="Coding Blocks"/>
+                  <img class="img-responsive " width="200" src="assets/media/sponsors/codingBlocks.png" alt="Coding Blocks"/>
                   <p>Platinum Sponsor</p>
               </a>
-          </div><!-- Col 1 end -->
+          </div><!-- Col 2 end -->
 
-          <div class="col-xs-12 col-sm-4 col-md-4"></div>
+          <div class="col-xs-12 col-sm-4 col-md-3">
+            <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive " width="200" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
+                <p>Education Partner</p>
+            </a>
+          </div><!-- Col 2 end -->
+
       </div><!-- Content row 4 end -->
 
       <div class="row text-center">
@@ -899,7 +910,7 @@
     <!-- Template custom -->
     <script type="text/javascript" src="assets/js/custom.js"></script>
 
-    
+
     <script type="text/javascript">
 //This is the "Offline copy of pages" service worker
 
