--- a/index.html
+++ b/index.html
@@ -465,116 +465,131 @@
         </div><!--/ Title row end -->
 
         <div class="row text-center">
-            <div class="col-xs-12 col-sm-4 col-md-3">
+             <div class="col-xs-12 col-sm-4 col-md-4"></div>
+             <div class="col-xs-12 col-sm-4 col-md-4">
+             <a href="https://github.com/" target="_blank" class="sponsor-logo highlight">
+                 <img class="img-responsive" width="800px" src="assets/media/sponsors/GitHub_Logo.png" alt="GitHub"/>
+                 <p>Associate Sponsor</p>
+             </a>
+             </div><!-- Col 3 end -->
+             <div class="col-xs-12 col-sm-4 col-md-4"></div>
+       </div>
+
+        <div class="row text-center">
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <a href="https://www.mozilla.org/en-US" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive  align-css" width="200" src="assets/media/sponsors/mozilla.jpg" alt="mozilla"/>
                     <p style="margin-top:40px;">Open Source Sponsor</p>
                 </a>
             </div><!-- Col 1 end -->
 
-            <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <a href="https://developers.facebook.com/developercircles/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive" width="200" src="assets/media/sponsors/developer_circle.png" alt="developer circle"/>
                     <p style="margin-top:42px;">Community Partner</p>
                 </a>
             </div><!-- Col 2 end -->
 
-            <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <a href="http://hacksociety.tech/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive" width="200" src="assets/media/sponsors/hacksociety.png" alt="hacksociety"/>
                     <p>Hackathon Partner</p>
                 </a>
             </div><!-- Col 3 end -->
 
-            <div class="col-xs-12 col-sm-4 col-md-3">
-                <a href="https://girlscriptsummit.tech/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive " width="200" style="margin-left:20px" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
-                    <p>Open Source and Diversity Partner</p>
-                </a>
-            </div><!-- Col 4 end -->
         </div><!--/ Content row 1 end -->
 
         <div class="row text-center">
-            <div class="col-xs-12 col-sm-4 col-md-3">
+
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <a href="https://girlscriptsummit.tech/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="200" style="margin-left:20px" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
+                  <p>Open Source and Diversity Partner</p>
+              </a>
+          </div><!-- Col 1 end -->
+
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <a href="https://www.jetbrains.com/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive" width="200" src="assets/media/sponsors/Jetbrains.png" alt="jetbrains"/>
                     <p>IDE Sponsor</p>
                 </a>
-            </div><!-- Col 1 end -->
+            </div><!-- Col 2 end -->
 
-            <div class="col-xs-12 col-sm-4 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <a href="https://gitlab.com/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive " width="200" src="assets/media/sponsors/gitlab.png" alt="GitLab"/>
                     <p style="margin-top:14px">Diversity Sponsor</p>
                 </a>
-            </div><!-- Col 2 end -->
-            <div class="col-xs-12 col-sm-4 col-md-3">
-                <a href="https://balsamiq.com/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive " width="200" src="assets/media/sponsors/balasmiq.png" alt="balsamiq"/>
-                    <p>Silver Sponsor</p>
-                </a>
             </div><!-- Col 3 end -->
-            <div class="col-xs-12 col-sm-4 col-md-3">
-                <a href="http://advantedge.vc/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive " width="200" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
-                    <p>VC Support</p>
-                </a>
-            </div><!-- Col 4 end -->
+
         </div><!-- Content row 2 end -->
         <div class="row text-center">
-            <div class="col-xs-12 col-sm-4 col-md-3">
+
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <a href="https://balsamiq.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="200" src="assets/media/sponsors/balasmiq.png" alt="balsamiq"/>
+                  <p>Silver Sponsor</p>
+              </a>
+          </div><!-- Col 1 end -->
+
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <a href="http://advantedge.vc/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="200" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
+                  <p>VC Support</p>
+              </a>
+          </div><!-- Col 2 end -->
+
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <a href="https://www.get.tech/" target="_blank" class="sponsor-logo highlight">
                     <img class="img-responsive align-css" width="200" src="assets/media/sponsors/tech.png" alt=".tech"/>
                     <p>Domain Sponsor</p>
                 </a>
-            </div><!-- Col 1 end -->
-
-            <div class="col-xs-12 col-sm-4 col-md-3">
-                <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wittyfeed.png" alt="wittyfeed"/>
-                    <p style="margin-top:32px">Powered By</p>
-                </a>
-            </div><!-- Col 2 end -->
-
-            <div class="col-xs-12 col-sm-4 col-md-3">
-                <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive align-css" width="200" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
-                    <p style="margin-top:56px">Platform Sponsor</p>
-                </a>
             </div><!-- Col 3 end -->
-
-            <div class="col-xs-12 col-sm-4 col-md-3">
-                <a href="https://github.com/" target="_blank" class="sponsor-logo highlight">
-                    <img class="img-responsive" width="176" src="assets/media/sponsors/github.png" alt="GitHub"/>
-                    <p>Associate Sponsor</p>
-                </a>
-            </div><!-- Col 4 end -->
 
         </div><!-- Content row 3 end -->
 
         <div class="row text-center">
-            <div class="col-xs-12 col-sm-4 col-md-3">
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive align-css" width="200" src="assets/media/sponsors/wittyfeed.png" alt="wittyfeed"/>
+                  <p style="margin-top:32px">Powered By</p>
+              </a>
+          </div><!-- Col 1 end -->
+
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive align-css" width="200" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
+                  <p style="margin-top:56px">Platform Sponsor</p>
+              </a>
+          </div><!-- Col 2 end -->
+
+          <div class="col-xs-12 col-sm-4 col-md-4">
+            <a href="https://codingblocks.com/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive " width="200" src="assets/media/sponsors/codingBlocks.png" alt="Coding Blocks"/>
+                <p>Platinum Sponsor</p>
+            </a>
+          </div><!-- Col 3 end -->
+        </div><!-- Content row 4 end -->
+
+        <div class="row text-center">
+            <div class="col-xs-12 col-sm-4 col-md-4">
               <a href="https://zulipchat.com/" target="_blank" class="sponsor-logo highlight">
                   <img class="img-responsive " width="144" src="assets/media/sponsors/zulip.png" alt="Zulip"/>
                   <p>Chat Partner</p>
                 </a>
-            </div><!-- Col 2 end -->
+            </div><!-- Col 1 end -->
 
-            <div class="col-xs-12 col-sm-4 col-md-3">
-              <a href="https://codingblocks.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="200" src="assets/media/sponsors/codingBlocks.png" alt="Coding Blocks"/>
-                  <p>Platinum Sponsor</p>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+              <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " width="200" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
+                  <p>Education Partner</p>
               </a>
-          </div><!-- Col 2 end -->
+             </div><!-- Col 2 end -->
 
-          <div class="col-xs-12 col-sm-4 col-md-3">
-            <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
-                <img class="img-responsive " width="200" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
-                <p>Education Partner</p>
-            </a>
-          </div><!-- Col 2 end -->
+          <div class="col-xs-12 col-sm-4 col-md-4">
+          </div><!-- Col 3 end -->
 
-      </div><!-- Content row 4 end -->
+      </div><!-- Content row 5 end -->
 
       <div class="row text-center">
         <h3 class="sponsor-title">Patrons</h3>
