Updated registration link

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <p class="intro-desc lead">MS Hacks is one of the biggest event that is conducted by Microsoft Student Technical Community of LPU. The sole aim of this hackathon is to provide a competitive environment where students from all the domains come together and build something innovative. We encourage the students to build problems that can solve real-life challenges for users. We aim to build better future with Technology. Are you in? Register Now ...</p>
                     <div class="gap-20"></div>
                     <p>
-                        <a href="https://hacksociety.tech/attend/hackathon/44" target="_blank" class="btn btn-primary">Registrations are open <i class="fa fa-long-arrow-right"></i></a>
+                        <a href="https://mstclpuhacks.hackerearth.com/" target="_blank" class="btn btn-primary">Registrations are open <i class="fa fa-long-arrow-right"></i></a>
                     </p>
                 </div><!-- Intro content -->
             </div><!-- Col end -->
