--- a/index.html
+++ b/index.html
@@ -565,31 +565,51 @@
 
           <div class="col-xs-12 col-sm-4 col-md-4">
             <a href="https://girlscriptsummit.tech/" target="_blank" class="sponsor-logo highlight">
-                <img class="img-responsive" width="200" style="margin-left:10px;" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
-                <p>Open Source and Diversity Partner</p>
+                <img class="img-responsive" width="200" src="assets/media/sponsors/gslogo.png" alt="girls script"/>
+                <p>Silver Sponsor</p>
             </a>
           </div><!-- Col 3 end -->
         </div><!-- Content row 4 end -->
 
         <div class="row text-center">
             <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://zulipchat.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="120px" src="assets/media/sponsors/zulip.png" alt="Zulip"/>
-                  <p>Chat Partner</p>
+              <a href="https://in.msi.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " style="margin-top:20px" width="200px" src="assets/media/sponsors/msiLogo.png" alt="MSI"/>
+                  <p style="padding-top:60px" >Technical Curator Partner</p>
                 </a>
             </div><!-- Col 1 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive " width="160" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
-                  <p>Education Partner</p>
+              <a href="https://unity3d.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive " style="margin-top:40px" width="220px" src="assets/media/sponsors/unityLogo.png" alt="Unity"/>
+                  <p style="padding-top:60px" >Technical Curator Partner</p>
               </a>
              </div><!-- Col 2 end -->
 
           <div class="col-xs-12 col-sm-4 col-md-4">
+            <a href="https://zulipchat.com/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive " width="120px" src="assets/media/sponsors/zulip.png" alt="Zulip"/>
+                <p>Chat Partner</p>
+              </a>
           </div><!-- Col 3 end -->
 
       </div><!-- Content row 5 end -->
+
+      <div class="row text-center">
+          <div class="col-xs-12 col-sm-4 col-md-4">
+          </div><!-- Col 1 end -->
+
+          <div class="col-xs-12 col-sm-4 col-md-4">
+            <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive " width="160" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
+                <p>Education Partner</p>
+            </a>
+           </div><!-- Col 2 end -->
+
+        <div class="col-xs-12 col-sm-4 col-md-4">
+        </div><!-- Col 3 end -->
+
+    </div><!-- Content row 6 end -->
 
       <div class="row text-center">
         <h3 class="sponsor-title">Patrons</h3>
