--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="banner-content text-center" >
                 <h1 class="banner-title "><span>Be a part of </span>MSHacks 2.0</h1>
                 <h4 style="color:inherit;">Associate Sponsor GitHub</h4>
-                <h2 class="banner-desc "><span class="first">26-28 August</span><span>Lovely Professional University</span><span>2018 Edition</span></h2>
+                <h2 class="banner-desc "><span class="first">31 August - 02 September</span><span>Lovely Professional University</span><span>2018 Edition</span></h2>
             </div>
         </div><!-- Container end -->
         <img src="assets/media/banner-bottom-img.png" alt="img" class="banner-bottom-img" />
