--- a/index.html
+++ b/index.html
@@ -508,12 +508,12 @@
             </a>
           </div><!-- Col 1 end -->
 
-            <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://developers.facebook.com/developercircles/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive" width="200" src="assets/media/sponsors/developer_circle.png" alt="developer circle"/>
-                  <p style="margin-top:42px;">Community Partner</p>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
+                  <img class="img-responsive align-css" style="margin-top:100px" width="240" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
+                  <p style="margin-top:40px;">Platform Sponsor</p>
               </a>
-            </div><!-- Col 2 end -->
+          </div><!-- Col 2 end -->
 
             <div class="col-xs-12 col-sm-4 col-md-4">
               <a href="https://www.wittyfeed.com/" target="_blank" class="sponsor-logo highlight">
@@ -550,16 +550,16 @@
 
         <div class="row text-center">
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <a href="https://www.hackerearth.com/" target="_blank" class="sponsor-logo highlight">
-                  <img class="img-responsive align-css" style="margin-top:100px" width="200" src="assets/media/sponsors/HE.png" alt="Hackerearth"/>
-                  <p>Platform Sponsor</p>
-              </a>
+            <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive " width="180" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
+                <p style="padding-top:20px">Education Partner</p>
+            </a>
           </div><!-- Col 1 end -->
 
           <div class="col-xs-12 col-sm-4 col-md-4">
             <a href="http://advantedge.vc/" target="_blank" class="sponsor-logo highlight">
-                <img class="img-responsive " width="200" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
-                <p>VC Support</p>
+                <img class="img-responsive " width="180" src="assets/media/sponsors/AdvantEdge.png" alt="AdvantEdge"/>
+                <p style="padding-top:20px">VC Support</p>
             </a>
           </div><!-- Col 2 end -->
 
@@ -594,22 +594,6 @@
           </div><!-- Col 3 end -->
 
       </div><!-- Content row 5 end -->
-
-      <div class="row text-center">
-          <div class="col-xs-12 col-sm-4 col-md-4">
-          </div><!-- Col 1 end -->
-
-          <div class="col-xs-12 col-sm-4 col-md-4">
-            <a href="https://www.interviewcake.com/" target="_blank" class="sponsor-logo highlight">
-                <img class="img-responsive " width="160" src="assets/media/sponsors/interviewCake.png" alt="Interview Cake"/>
-                <p>Education Partner</p>
-            </a>
-           </div><!-- Col 2 end -->
-
-        <div class="col-xs-12 col-sm-4 col-md-4">
-        </div><!-- Col 3 end -->
-
-    </div><!-- Content row 6 end -->
 
       <div class="row text-center">
         <h3 class="sponsor-title">Patrons</h3>
@@ -689,8 +673,8 @@
         </div><!--/ Title row end -->
 
         <div class="row">
-          <div class="col-xs-6 col-sm-3 col-md-2"></div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="col-xs-2 col-sm-2 col-md-2"></div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="ts-speaker transparent">
                 <div class="ts-speaker-image">
                     <img class="img-responsive" src="assets/media/ravi.jpg" alt="raviMSP" />
@@ -709,7 +693,7 @@
             </div><!-- Speaker end -->
         </div><!-- Speaker Col 1 end -->
 
-        <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="ts-speaker transparent">
                 <div class="ts-speaker-image">
                     <img class="img-responsive" src="assets/media/sanu.jpg" alt="soumyajitMSP" />
@@ -727,7 +711,7 @@
                 </div><!-- Info end -->
             </div><!-- Speaker end -->
         </div><!-- Speaker Col 2 end -->
-        <div class="col-xs-6 col-sm-3 col-md-2"></div>
+        <div class="col-xs-2 col-sm-2 col-md-2"></div>
     </div><!-- Content row 1 end -->
 
 
