Update event timeline

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                     <ul class="social-links">
                         <li><a href="https://instagram.com/zneroravi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         <li><a ><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://facebook.com/windstormfire" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://facebook.com/ravigmsp" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://twitter.com/zneroravi" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                 </div><!--Image end -->
@@ -731,11 +731,16 @@
                 <div class="venu-info-content event1">
                 </div><!-- Venu content end -->
                 <div class="hover-content">
-                    <h3 class="venu-info-title">Meetups</h3>
+                    <h3 class="venu-info-title">Imagine Talks</h3>
                     <div class="event-detail">
                       <span class="venu-info-icon"><i class="fa fa-map-marker"></i></span>
                       <p class="venu-info-text">
-                      Block 34 Room.111</p>
+                      Block 34 Room 413
+                      <br>
+                      We conducted a one day event on Blockchain, Git, Data Science and Machine Learning and
+                      Front End technologies and frameworks with MSPs and MSTC team.
+                      More then 200 student participated in this event.
+                    </p>
                   </div>
               </div>
           </div><!-- Col 1 end -->
@@ -744,15 +749,14 @@
             <div class="venu-info-content event2">
             </div><!-- Venu content end -->
             <div class="hover-content">
-              <h3 class="venu-info-title">Session</h3>
+              <h3 class="venu-info-title">Git and Github Workshop</h3>
               <div class="event-detail">
                 <span class="venu-info-icon"><i class="fa fa-map-marker"></i></span>
                 <p class="venu-info-text">
-                 Block 34 Room.111
+                 Block 34 Room 413
                  <br>
-                 Sessions are taken by MSTC very frequently to make the students aware
-                 of the latest technologies up in the market.
-             In the session the students are guided to code, learn and innovate</p>
+                 Git and Github Workshop conducted by MSTC LPU.
+                 </p>
          </div>
      </div>
  </div><!-- Col 2 end -->
@@ -761,11 +765,13 @@
     <div class="venu-info-content event3">
     </div><!-- Venu content end -->
     <div class="hover-content">
-      <h3 class="venu-info-title">Microsoft Hackathon</h3>
+      <h3 class="venu-info-title">Microsoft Hackathon </h3>
       <div class="event-detail">
         <span class="venu-info-icon"><i class="fa fa-map-marker"></i></span>
         <p class="venu-info-text">
-        Bits Pilani</p>
+        Block 33</p>
+        <br>
+        Microsoft Hackathon 1.0 takes off in style !!
     </div>
 </div>
 </div><!-- Col 3 end -->
@@ -777,11 +783,10 @@
       <h3 class="venu-info-title">Git and GitHub Workshop</h3>
       <div class="event-detail">
         <span class="venu-info-icon"><i class="fa fa-map-marker"></i></span>
-        <p class="venu-info-text">Lovely Professional University
+        <p class="venu-info-text">Block 34 Room 111
           <br>
-          GitHub has always been in trend when it comes to software or an app.
-          We as part of Microsoft make the students aware of the VCS
-          and help them deploy their apps on it.
+          Major League hacking sponsored by Github and various others.
+          Successfully completed MLH on Dec 2nd 2017 at LPU.
       </p>
   </div>
 </div>
@@ -790,16 +795,19 @@
     <div class="venu-info-content event5">
     </div><!-- Venu content end -->
     <div class="hover-content">
-
-      <h3 class="venu-info-title">Imagine Talks</h3>
+      <h3 class="venu-info-title">Imagine Camp</h3>
       <div class="event-detail">
         <span class="venu-info-icon"><i class="fa fa-map-marker"></i></span>
-        <p class="venu-info-text">Bits Pilani
+        <p class="venu-info-text">Shanti Devi Mittal Auditorium LPU
           <br>
-          Microsoft Imagine Cup has been the biggest event till
-          date. Mentors from Microsoft came to enlighten the
-          students with their knowledge. Students gained a lot
-          of knowledge on the Cloud Platform.
+          Speakers:-<br>
+          1. Venkatesh Sarvasiddhi-Head Academic Initiatives Microsoft
+          <br>
+          2. Vibhor Srivastava-Head MSP Program India Microsoft.
+          <br>
+          3. Osheen Chavhan-Founder, CEO at InfiSpark
+          <br>
+          4. Rohit Jain-Founder
       </p>
   </div>
 </div>
@@ -809,10 +817,15 @@
     </div><!-- Venu content end -->
     <div class="hover-content">
 
-      <h3 class="venu-info-title">Competitve Programming BootCamp</h3>
+      <h3 class="venu-info-title">Azure Bootcamp</h3>
       <div class="event-detail">
         <span class="venu-info-icon"><i class="fa fa-map-marker"></i></span>
-        <p class="venu-info-text">Lovely Professional University</p>
+        <p class="venu-info-text">Block 34 Room 413
+        <br>
+        Another day, and another productive session by Microsoft Technical Community - LPU
+        Ms Osheen Chavhan took a very interactive session on Azure at
+        Lovely Professional University - LPU on 26th March, 2018.
+        </p>
     </div>
 </div>
 </div><!-- Col 3 end -->
