--- a/index.html
+++ b/index.html
@@ -933,9 +933,10 @@
       <div class="event-detail">
         <span class="venu-info-icon"><i class="fa fa-map-marker"></i></span>
         <p class="venu-info-text">
-        Block 33</p>
+        Block 33
         <br>
         Microsoft Hackathon 1.0 takes off in style !!
+        </p>
     </div>
 </div>
 </div><!-- Col 3 end -->
