--- a/index.html
+++ b/index.html
@@ -746,13 +746,29 @@
              </div><!-- Col 2 end -->
 
           <div class="col-xs-12 col-sm-4 col-md-4">
-            <a class="sponsor-logo highlight">
-                <img class="img-responsive " width="200px" src="assets/media/sponsors/ldiGroup.png" alt="LDI Group Of Multimedia"/>
-                <p>Cinematic Partner</p>
+            <a href="https://in.udacity.com" target="_blank" class="sponsor-logo highlight">
+                <img class="img-responsive " style="margin-top:40px" width="280px" src="assets/media/sponsors/udacity.png" alt="Udacity"/>
+                <p>Knowledge Partner</p>
               </a>
           </div><!-- Col 3 end -->
 
       </div><!-- Content row 5 end -->
+
+      <div class="row text-center">
+          <div class="col-xs-12 col-sm-4 col-md-4">
+            <a class="sponsor-logo highlight">
+                <img class="img-responsive " width="200px" src="assets/media/sponsors/ldiGroup.png" alt="LDI Group Of Multimedia"/>
+                <p>Cinematic Partner</p>
+              </a>
+          </div><!-- Col 1 end -->
+
+          <div class="col-xs-12 col-sm-4 col-md-4">
+           </div><!-- Col 2 end -->
+
+        <div class="col-xs-12 col-sm-4 col-md-4">
+        </div><!-- Col 3 end -->
+
+    </div><!-- Content row 6 end -->
 
       <div class="row text-center">
         <h3 class="sponsor-title">Patrons</h3>
